--- a/style.css
+++ b/style.css
@@ -1,10 +1,4 @@
-html{
-margin:0;
-padding: 0;
-width: 100%;
-height: 100vh;
 
-}
 body {
 	
 margin:0;
@@ -41,19 +35,19 @@ height: 50px;
 background:rgba(0,0,0,0.5);
 outline: none;
 font-size: 18px;
-border: 1px solid rgba(0,0,0,0.5);
+border: 1px solid rgba(0,0,0,0.1);
 border-radius:7px;
 margin-bottom: 10px;
 padding-left: 10px;
 text-align: center;
-color:blue;
+color:#fff;
 }
 button {
-width:350px;
+width:340px;
 height: 50px;
-font-size:18px;
+font-size:20px;
 color:red;
-font-weight: lighter;
+background:1px solid rgba(0,0,0,0.1);
 border:10px;
 border-radius: 5px;
 
