--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ padding: 0;
 width: 100%;
 height: 100vh;
 color:red;
-background: url(Black.jpg) 50% 50% no-repeat;
+background: url(../Black.jpg) 50% 50% no-repeat;
 display: table;
 background-size: cover;
 
