--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
+html{
+margin:0;
+padding: 0;
+width: 100%;
+height: 100vh;
 
+}
 body {
 	
 margin:0;
@@ -6,7 +12,7 @@ padding: 0;
 width: 100%;
 height: 100vh;
 color:red;
-background: url(../Black.jpg) 50% 50% no-repeat;
+background: url(Black.jpg) 50% 50% no-repeat;
 display: table;
 background-size: cover;
 
@@ -35,19 +41,19 @@ height: 50px;
 background:rgba(0,0,0,0.5);
 outline: none;
 font-size: 18px;
-border: 1px solid rgba(0,0,0,0.1);
+border: 1px solid rgba(0,0,0,0.5);
 border-radius:7px;
 margin-bottom: 10px;
 padding-left: 10px;
 text-align: center;
-color:#fff;
+color:blue;
 }
 button {
-width:340px;
+width:350px;
 height: 50px;
-font-size:20px;
+font-size:18px;
 color:red;
-background:1px solid rgba(0,0,0,0.1);
+font-weight: lighter;
 border:10px;
 border-radius: 5px;
 
